<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Bead Store</string>
    <string name="action_settings">Settings</string>
    <string name="btnFindByColor">Find</string>
    <string name="colorNumber">color</string>
    <string name="beadPosition">position</string>
    <string name="beadColorHint">color code</string>
    <string name="beadNotFound">missing</string>
    <string name="beadIconDescr">bead icon</string>
    <string name="standWing">wing</string>
    <string name="beadLocationRowDescr">in which row the bead is located</string>
    <string name="beadLocationColumnDescr">in which column the bead is located</string>
    <string name="colorNumberMissing">!!!!!!</string>
</resources>
