<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/body"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="#E0E0E0"
    tools:context="com.veontomo.beadstore.BeadActivity" >

    <ImageView
        android:id="@+id/fooImage"
        android:layout_width="100dp"
        android:layout_height="wrap_content" />
   
    <EditText
        android:layout_below="@id/fooImage"
        android:id="@+id/beadColor"
        style="@style/beadColorInput"
        android:hint="@string/beadColorHint"
        android:inputType="phone">
    </EditText>

    <Button
        android:id="@+id/btnBeadFind"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/beadColor"
        android:layout_toEndOf="@+id/beadColor"
        android:layout_toRightOf="@+id/beadColor"
        android:text="@string/btnFindByColor"
        android:textColor="#FF7A00"
        android:textSize="15sp" />
     <ImageView
        android:id="@+id/icon"
        android:layout_below="@id/beadColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/beadIconDescr" />
    

    <ListView
        android:id="@+id/list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/icon" />

</RelativeLayout>